--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.lishid</groupId>
   <artifactId>orebfuscator</artifactId>
   <packaging>jar</packaging>
-  <version>3.0.6</version>
+  <version>3.0.6i</version>
   <name>Orebfuscator</name>
   <url>http://dev.bukkit.org/server-mods/orebfuscator/</url>
 
@@ -14,12 +14,12 @@
 
   <repositories>
     <repository>
-      <id>comphenix-snapshots</id>
-      <url>http://repo.comphenix.net/content/repositories/snapshots/</url>
+      <id>dmulloy2-repo</id>
+      <url>http://repo.dmulloy2.net/content/groups/public/</url>
     </repository>
     <repository>
-      <id>repobo-snap</id>
-      <url>http://repo.bukkit.org/content/groups/public</url>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
   </repositories>
 
@@ -34,14 +34,13 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>craftbukkit</artifactId>
-      <version>1.8.4-R0.1-SNAPSHOT</version>
-      <scope>system</scope>
-      <systemPath>U:/Downloads/spigot-1.8.4-R0.1-SNAPSHOT-latest.jar</systemPath>
+      <version>1.8.6-R0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.comphenix.protocol</groupId>
-      <artifactId>ProtocolLib</artifactId>
-      <version>3.5.0-SNAPSHOT</version>
+      <artifactId>ProtocolLib-API</artifactId>
+      <version>4.2.0</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
@@ -49,6 +48,7 @@
   <build>
     <defaultGoal>clean install</defaultGoal>
     <sourceDirectory>src/main/java</sourceDirectory>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
